setup up socket io

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,3 +6,6 @@ html
   body
     block content
   script(src='//localhost:35729/livereload.js')
+  script(src='/lib/jquery.min.js')
+  script(src='/socket.io/socket.io.js')
+  script(src='/javascripts/connection.js')
