--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,3 +32,28 @@ body {
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   text-decoration: none;
 }
+.output {
+  background-color: #C8C8C8;
+  border-radius: 5px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  width: 300px;
+  height: 400px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.messages li {
+  padding: 5px 10px;
+}
+.messages li:nth-child(odd) {
+  background: #eee;
+}
