--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-  input.number
+  div.output
+    ul.messages   
+  input.number(autocomplete="off")
+  button.btn-send Send
