--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,19 +32,15 @@ body {
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   text-decoration: none;
 }
-.output {
-  background-color: #C8C8C8;
-  border-radius: 5px;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  width: 300px;
-  height: 400px;
+.wrapper{
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
+  width: 400px;
+  height: 500px;
 }
 .messages {
   list-style-type: none;
@@ -56,4 +52,25 @@ body {
 }
 .messages li:nth-child(odd) {
   background: #eee;
+}
+.output {
+  position: relative;
+  background-color: #C8C8C8;
+  border-radius: 3px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  width: 300px;
+  height: 400px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.input {
+  margin-top: 50px;
+  margin-left: 80px;
+  position: relative;
+  width: 300px;
+  height: 50px;
 }
