socket emit from form submit

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
   div.wrapper
     div.output
       ul.messages  
-    div.input 
-      input.number(autocomplete="off")
-      button.btn-send Send
+    div.input
+      form(action="")
+        input.number(autocomplete="off")
+        input.btn-send(type="submit")
