--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   div.wrapper
     div.output
-      ul.messages  
+      ul.messages
+        li Welcome on vt.io
     div.input
       form(action="")
         input.number(autocomplete="off")
