--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     div.output
       ul.messages
         li Welcome on vt.io
-    div.input
+    div.inpt
       form(action="")
         input.number(autocomplete="off")
         input.btn-send(type="submit")
