--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: #E0E0E0;
 }
-.btn {
+.btnStart {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   position: absolute;
@@ -23,7 +23,7 @@ body {
   margin: auto;
 }
 
-.btn:hover {
+.btnStart:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
@@ -67,7 +67,7 @@ body {
   right: 0;
   margin: auto;
 }
-.input {
+.inpt {
   margin-top: 50px;
   margin-left: 80px;
   position: relative;
