--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap.min.css')
   body
     block content
   script(src='//localhost:35729/livereload.js')
