adjust intro + button css

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,8 @@ block content
   div.wrapper
     div.output
       ul.messages
-        li Welcome on vt.io
+        li(style="color: blue") Welcome on vt.io, choose a number !
     div.inpt
       form(action="")
         input.number(autocomplete="off")
-        input.btn-send(type="submit")
+        input.btn-send(type="submit", value="Send")
