--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   div.wrapper
     div.output
       ul.messages
-        li(style="color: blue") Welcome on vt.io, choose a number !
+        li(style="color: blue") Welcome on vt.io!
     div.inpt
       form(action="")
         input.number(autocomplete="off")
